--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2014-05-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/security/MessageDigest/MessageDigestMD5Test.java:
+	Added test for checking if JVM supports the following standard MessageDigest
+	algorithms: MD5.
+
+2014-05-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/NumberFormatException/classInfo/getAnnotation.java:
 	* testlet/java/lang/NumberFormatException/classInfo/getAnnotations.java:
 	* testlet/java/lang/NumberFormatException/classInfo/getCanonicalName.java:
