--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2014-06-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/security/MessageDigest/MessageDigestSHA256Test.java:
+	Added test for checking if JVM supports the following standard MessageDigest
+	algorithms: SHA256.
+
+2014-06-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/NumberFormatException/classInfo/getInterfaces.java:
 	* testlet/java/lang/NumberFormatException/classInfo/getModifiers.java:
 	* testlet/java/lang/NumberFormatException/classInfo/getName.java:
