--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-06-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/VerifyError/classInfo/getAnnotation.java:
+	* testlet/java/lang/VerifyError/classInfo/getAnnotations.java:
+	* testlet/java/lang/VerifyError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/VerifyError/classInfo/getClasses.java:
+	* testlet/java/lang/VerifyError/classInfo/getComponentType.java:
+	Five new tests added into VerifyError/classInfo.
+
 2014-06-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/security/MessageDigest/MessageDigestSHA512Test.java:
