--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2014-06-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/javax/crypto/Cipher/AESCipherTest.java:
+	Added test for AES Cipher.
+
+2014-06-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/VerifyError/classInfo/getAnnotation.java:
 	* testlet/java/lang/VerifyError/classInfo/getAnnotations.java:
 	* testlet/java/lang/VerifyError/classInfo/getCanonicalName.java:
