--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-06-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getAnnotation.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getAnnotations.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getClasses.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getField.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getMethod.java:
+	Added six new test into UnsupportedOperationException/classInto.
+
 2014-06-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedOperationException/TryCatch.java:
