--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-07-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getComponentType.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getDeclaredField.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/UnsupportedOperationException/classInfo/getEnclosingClass.java:
+	Added five new test into UnsupportedOperationException/classInto.
+
 2014-06-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsupportedOperationException/classInfo/getAnnotation.java:
