--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-07-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnsatisfiedLinkError/classInfo/getAnnotation.java:
+	* testlet/java/lang/UnsatisfiedLinkError/classInfo/getAnnotations.java:
+	* testlet/java/lang/UnsatisfiedLinkError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/UnsatisfiedLinkError/classInfo/getClasses.java:
+	* testlet/java/lang/UnsatisfiedLinkError/classInfo/getComponentType.java:
+	Five new tests added into UnsatisfiedLinkError/classInto.
+
 2014-07-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnsatisfiedLinkError/classInfo/isAnonymousClass.java:
