--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-08-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnknownError/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/UnknownError/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/UnknownError/classInfo/getDeclaredField.java:
+	* testlet/java/lang/UnknownError/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/UnknownError/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/UnknownError/classInfo/getEnclosingClass.java:
+	Six new tests added into java/lang/UnknownError/classInto.
+
 2014-08-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnknownError/classInfo/isAnnotationPresent.java:
