--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-08-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/UnknownError/classInfo/getAnnotations.java:
+	* testlet/java/lang/UnknownError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/UnknownError/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/UnknownError/classInfo/getField.java:
+	* testlet/java/lang/UnknownError/classInfo/getMethod.java:
+	Five new tests added into java/lang/UnknownError/classInto.
+
 2014-08-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/UnknownError/classInfo/getFields.java:
