--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-08-25  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/TypeNotPresentException/classInfo/getAnnotation.java:
+	* testlet/java/lang/TypeNotPresentException/classInfo/getAnnotations.java:
+	* testlet/java/lang/TypeNotPresentException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/TypeNotPresentException/classInfo/getClasses.java:
+	* testlet/java/lang/TypeNotPresentException/classInfo/getComponentType.java:
+	* testlet/java/lang/TypeNotPresentException/classInfo/getConstructor.java:
+	Added six new tests into java/lang/TypeNotPresentException.
+
 2014-08-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/TypeNotPresentException/classInfo/getConstructors.java:
